29-October-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
 * backend-django/clarin_backend/sql_views.py:
 * backend-django/clarin_backend/urls.py:
 * backend-django/clarin_backend/utils.py:
 * backend-django/vast_rdf/vast_repository.py:
 * clarin-angular/package.json
 * clarin-angular/src/app/app.module.ts:
 * clarin-angular/src/app/components/views/manage-collections/manage-collections.component.html:
 * clarin-angular/src/app/components/views/manage-collections/manage-collections.component.ts:
 * clarin-angular/src/app/services/collection-service/collection-service.service.ts:
 * clarin-angular/src/assets/i18n/el-GR.json:
 * clarin-angular/src/assets/i18n/en-US.json: Added ability to export all
 Collections.

26-July-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 * clarin-angular/src/app/components/views/annotation/annotation.component.html:
 * clarin-angular/src/app/components/views/annotation/annotation.component.ts:
 * clarin-angular/src/assets/i18n/el-GR.json:
 * clarin-angular/src/assets/i18n/en-US.json:
 * clarin-angular/src/css/clarin-material.scss: Added preliminary support for
 zooming during image annotation.

24-July-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/package.json: Updated version to 3.3.3. (Image overlapping
 areas selection).
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 * clarin-angular/src/app/services/text-widget/text-widget.service.ts:
 Added support for overlapping areas on image annotations.

30-May-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
 * backend-django/vast_rdf: Code for synchronising annotations with a SPARQL
 endpoint.

22-April-2023 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/button/annotation-indicator/annotation-indicator.component.ts: